--- a/src/web/index.css
+++ b/src/web/index.css
@@ -109,3 +109,75 @@ body {
 #welcome-content {
   transition: all 0.2s ease-in-out;
 }
+.message-holder {
+  margin-top: 40px;
+  overflow: visible;
+}
+.message-content {
+  padding: 10px;
+
+  min-width: 59px;
+  text-align: left;
+  border-radius: 15px;
+  margin: 10px;
+  width: fit-content;
+  transition: all 0.2s ease-in-out;
+  animation: floatin 1s ease-in-out;
+}
+.loader-linear {
+  overflow: hidden;
+  width: 100%;
+  height: 4px;
+  visibility: hidden;
+  margin-top: 50px;
+}
+.indeterminate {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.indeterminate:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  background-color: #03a9f4;
+  animation: indeterminate_first 1.5s infinite ease-out;
+}
+
+.indeterminate:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  background-color: #4fc3f7;
+  animation: indeterminate_second 1.5s infinite ease-in;
+}
+@keyframes floatin {
+  0% {
+    transform: translateY(100px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes indeterminate_first {
+  0% {
+    left: -100%;
+    width: 100%;
+  }
+  100% {
+    left: 100%;
+    width: 10%;
+  }
+}
+
+@keyframes indeterminate_second {
+  0% {
+    left: -150%;
+    width: 100%;
+  }
+  100% {
+    left: 100%;
+    width: 10%;
+  }
+}
