--- a/src/web/index.css
+++ b/src/web/index.css
@@ -171,9 +171,9 @@ body {
   border-radius: 25px;
   border-top: #03a9f4 solid 5px;
   z-index: 100;
-  visibility: visible;
+  visibility: hidden;
   transition: transform 1s ease-in-out;
-  /*transform: translateY(100%);*/
+  transform: translateY(100%);
 }
 #close-settings-btn {
   margin: 20px;
@@ -188,12 +188,63 @@ body {
   grid-auto-flow: row;
   margin: 10px;
   padding: 50px;
+  gap: 10px;
 }
-.settings-rows {
-  width: auto;
+.settings-row {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.settings-row input {
+  width: 100%;
   height: 30px;
-  background-color: #ffbfbf;
+  background-color: #1e1e1e;
+  border: none;
+  outline: none;
+  color: rgb(204, 201, 201);
+  padding: 5px;
+  padding-left: 10px;
+  font-size: 20px;
+  caret-color: cyan;
 }
+
+.settings-title {
+  font-size: 20px;
+  display: block;
+  font-weight: bold;
+  color: #707070;
+}
+.settings-desc {
+  font-size: 16px;
+  color: #707070;
+}
+.settings-save-btn {
+  width: 120px;
+  border-radius: 25px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 30px;
+  justify-self: center;
+  align-self: center;
+  margin-left: auto;
+  margin-right: 40px;
+  text-align: center;
+  height: 30px;
+  background-color: rgb(55, 0, 255);
+  border: none;
+  outline: none;
+  color: rgb(204, 201, 201);
+  padding: 5px;
+  padding-left: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.settings-save-btn:hover {
+  background-color: rgb(84, 38, 248);
+  color: white;
+}
+
 @keyframes floatin {
   0% {
     transform: translateY(100px);
